--- a/flow.html
+++ b/flow.html
@@ -463,8 +463,8 @@ if (config) {
  //JWWWWWW
     jwplayer("player").setup({
         playlist: [{
-           title : "REPRODUCTOR",
-description: "EN VIVO",
+           title : "Fútbol Libre 2",
+description: "futbollibre2.online
             sources: sources
         }],
         autostart: false,
