--- a/flow.html
+++ b/flow.html
@@ -460,7 +460,7 @@ if (config) {
     jwplayer("player").setup({
         playlist: [{
            title : "Fútbol Libre 2",
-description: "futbollibre2.online
+description: "futbollibre2.online",
             sources: sources
         }],
         autostart: false,
