--- a/flow.html
+++ b/flow.html
@@ -431,6 +431,11 @@ body {
                 k1: "e54e9ea87a634658fbba0e380aa701a7",
                 k2: "4e486d25d7d0e7d131743b285963c643"
             },
+	 "telefe": {
+                url: "//chromecast.cvattv.com.ar/live/c6eds/TelefeHD/SA_Live_dash_enc_wl/TelefeHD.mpd",
+                k1: "3cec1b1ea9799dda5596e64f37e5ed20",
+                k2: "c69f3afde2085dcaaaddbf55246a0323"
+            },
             "TYC_SPORTS_PLAY": {
                 url: "https://dpyzprfzko681.cloudfront.net/out/v1/366fc52554ae42c58465ea4b278eac0c/index.m3u8",
             },
