--- a/tnt-sports.html
+++ b/tnt-sports.html
@@ -53,8 +53,8 @@
 <meta name="theme-color" content="#ffffff">
     <!-- Más enlaces de favicon siguen aquí -->
 
-    <link href="../css/bootstrap.css" rel="stylesheet">
-    <link href="../css/portada.css?v=a" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/portada.css?v=a" rel="stylesheet">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#ffffff">
     <script src="../ajax/libs/jquery/3.3.1/jquery.min.js"></script>
