--- a/tnt-sports.html
+++ b/tnt-sports.html
@@ -155,9 +155,9 @@ onclick="document.getElementById('iframe').src='https://futbollibre2.online/embe
     </div>
     <div class="publicidad-derecha" id="publicidad-derecha">
         <iframe class="twitch lazyloaded" id="twitch-chat-embed"
-            data-src="https://www.twitch.tv/embed/futlibre/chat?parent=futbollibre2.online&amp;darkpopout&amp;no-mobile-redirect=true"
+            data-src="https://www.twitch.tv/embed/futlibre/chat?parent=flow.futbollibre2.online&amp;darkpopout&amp;no-mobile-redirect=true"
             width="100%" height="100%" loading="lazy"
-            src="https://www.twitch.tv/embed/futlibre/chat?parent=futbollibre2.online&amp;darkpopout&amp;no-mobile-redirect=true"
+            src="https://www.twitch.tv/embed/futlibre/chat?parent=flow.futbollibre2.online&amp;darkpopout&amp;no-mobile-redirect=true"
             style="border: 0px;"></iframe>
     </div>
 </div>
