--- a/tnt-sports.html
+++ b/tnt-sports.html
@@ -17,7 +17,7 @@
         content="Disfruta de TNT Sports en vivo con acceso exclusivo a eventos deportivos de elite, análisis detallados y contenido VIP para los aficionados al deporte.">
     <meta property="og:url" content="https://futbollibre2.online/en-vivo/tnt-sports">
     <meta property="og:site_name" content="Fútbol Online">
-    <meta property="og:image" content="../img/logo-canal/tnt-sports.webp">
+    <meta property="og:image" content="img/logo-canal/tnt-sports.webp">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:description"
         content="Disfruta de TNT Sports en vivo con acceso exclusivo a eventos deportivos de elite, análisis detallados y contenido VIP para los aficionados al deporte.">
@@ -87,7 +87,7 @@
     <!-- Inserte header en HTML -->
     <header class="d-flex justify-content-between bg-white border-bottom box-shadow">
 <a class="font-weight-normal" rel="home" href="/">
-            <img src="/img/logom.png" alt="Logo de Fútbol Libre 2" width="250" height="42.5">
+            <img src="https://flow.futbollibre2.online/img/logom.png" alt="Logo de Fútbol Libre 2" width="250" height="42.5">
         </a>
 
     </header>
