--- a/tnt-sports.html
+++ b/tnt-sports.html
@@ -120,9 +120,8 @@ href="https://futbollibre2.online/embed/iframe.html?get=https://streamtp.live/gl
 onclick="document.getElementById('iframe').src='https://futbollibre2.online/embed/iframe.html?get=https://streamtp.live/global2.php?stream=tntsports_argentina'">OP2 (Global)</a>
 
 <a class="btn btn-fl" target="iframe" 
-href="https://futbollibre2.online/embed/iframe.html?get=https://embed.sdfgnksbounce.com/embed2/tntsports.html" 
-onclick="document.getElementById('iframe').src='https://futbollibre2.online/embed/iframe.html?get=https://embed.sdfgnksbounce.com/embed2/tntsports.html'">OP3 (Global)</a>
-
+href="https://futbollibre2.online/embed/iframe.html?get=https://tucanaldeportivo.org/tntsports.php" 
+onclick="document.getElementById('iframe').src='https://futbollibre2.online/embed/iframe.html?get=https://tucanaldeportivo.org/tntsports.php'">OP3 (Global)</a>
 
 
 
